--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "web-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.hbs",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "vercel dev",
+    "build": "vercel build",
+    "deploy": "vercel --prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "hbs": "^4.2.0",
-    "postman-request": "^2.88.1-postman.40"
+    "postman-request": "^2.88.1-postman.40",
+    "punycode": "^2.3.1"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.37.2",
+    "vercel": "^37.14.0"
   }
 }
